--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+body{
+  background-color: antiquewhite;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .heading_style{
   padding: 30px 0px;
   text-align: center;
@@ -6,29 +11,32 @@
   font-size: 13px;
   letter-spacing: 2px;
   font-weight: 500;
-  background-color: #fff;
+  background-color: silver;
   font-size: 1.5rem;
   margin-bottom: 30px;
-}
-.card__img{
-  width: 100%;
-  height: 235px;
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
-}
-.card__info{
-  background-color: #fff;
-  border-bottom-left-radius: 12px;
-  border-bottom-right-radius: 12px;
-  padding: 16px 24px 24px 24px;
+  /* border: 2px solid orangered; */
+  border-radius: 20px;
 }
 
-.cards{
-  width: 100%;
-  height: auto;
+.container{
+  /* border: 2px solid orangered; */
+  background-color: silver;
+  max-width: 40%;
+  margin: auto;
 }
-.card{
-  margin: 6%;
-  transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
-  
+.container h1{
+  text-align: center;
+}
+.container p{
+  text-align: center;
+}
+.footer{
+  background-color: #fff;
+  max-width: 40%;
+  height: 50px;
+  border-radius: 20px;
+  border: 1px solid gray;
+  margin: auto;
+  position: relative;
+  text-align: center;
 }
